Improvements from PR comments