@@ -1,31 +1,29 @@
 package conf;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.hamcrest.MatcherAssert.assertThat;
 
+import com.google.common.collect.ImmutableSet;
 import java.io.FileInputStream;
 import java.io.InputStream;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Properties;
 import java.util.Set;
 import java.util.TreeSet;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import org.junit.Test;
 
+/**
+ * Tests that the messages files are in sync. Reads in the keys from the primary language file,
+ * `messages`, and ensures the keys are in sync with the `messages.*` files.
+ */
 public class MessagesTest {
 
   // The file path of the primary language file.
-  String PRIMARY_LANGUAGE_FILE = "conf/messages";
-
-  // The file paths of all non-primary language files, including `en-US`.
-  private static final Set<String> OTHER_LANGUAGE_FILES =
-      Set.of(
-          "conf/messages.am",
-          "conf/messages.en-US",
-          "conf/messages.es-US",
-          "conf/messages.ko",
-          "conf/messages.so",
-          "conf/messages.tl",
-          "conf/messages.vi",
-          "conf/messages.zh-TW");
+  private static final String PRIMARY_LANGUAGE_FILE = "conf/messages";
 
   // A set of keys that are present in the primary language file, but for which
   // we do *not* expect translations to be present. This is useful for keys that
@@ -33,8 +31,8 @@ public class MessagesTest {
   // we are waiting for translations for.
   //
   // TODO(#4505): remove keys that are checked in with 3/16 batch.
-  private static final Set<String> IGNORE_LIST =
-      Set.of(
+  private static final ImmutableSet<String> IGNORE_LIST =
+      ImmutableSet.of(
           "button.editCommonIntakeSr",
           "button.startHere",
           "button.startHereCommonIntakeSr",
@@ -55,7 +53,7 @@ public class MessagesTest {
   }
 
   @Test
-  public void testMessages() throws Exception {
+  public void messages_keysInPrimaryFileInAllOtherFiles() throws Exception {
     TreeSet<String> keysInPrimaryFile = keysInFile(PRIMARY_LANGUAGE_FILE);
     // Pretend that the keys in IGNORE_LIST are not in the primary message
     // file. These may be keys for features in development, for example. Keys
@@ -63,16 +61,24 @@ public class MessagesTest {
     // and are merged.
     keysInPrimaryFile.removeAll(IGNORE_LIST);
 
-    for (String file : OTHER_LANGUAGE_FILES) {
+    for (String file : otherLanguageFiles()) {
       TreeSet<String> keysInForeignLangFile = keysInFile(file);
 
       // Checks that the language file contains exactly the same message keys as the
-      // primary language file, *in the same order*.
+      // primary language file.
       //
-      // TODO(MichaelZetune): change containsSubsequence to containsExactlyElementsOf.
-      //  Currently this is not possible, even with IGNORE_LIST, because there are keys
-      //  that are present in some but not all of the non-primary language files.
-      assertThat(keysInForeignLangFile).containsSubsequence(keysInPrimaryFile);
+      // TODO(#4520): Modify this to ensure the keys are the same, not just that all
+      //  keys in primary file exist in foreign language files. Currently this is not possible,
+      //  even with IGNORE_LIST, because there are keys that are present in some but not all
+      //  of the non-primary language files.
+      TreeSet<String> keysInPrimaryFileCopy = new TreeSet<>(keysInPrimaryFile);
+      keysInPrimaryFileCopy.removeAll(keysInForeignLangFile);
+      assertThat(keysInPrimaryFileCopy)
+          .withFailMessage(
+              "%s found in primary language file but not in %s. Add these keys to %s or to the"
+                  + " ignore list in %s to resolve this issue.",
+              keysInPrimaryFileCopy, file, file, getClass().getName())
+          .isEmpty();
     }
   }
 
@@ -81,7 +87,7 @@ public class MessagesTest {
    * sorted order, even though the {@link Properties} class reads them into a HashMap with no
    * ordering guarantees (regardless of the ordering of the language files themselves).
    */
-  private TreeSet<String> keysInFile(String filePath) throws Exception {
+  private static TreeSet<String> keysInFile(String filePath) throws Exception {
     InputStream input = new FileInputStream(filePath);
 
     Properties prop = new Properties();
@@ -90,5 +96,17 @@ public class MessagesTest {
     return prop.keySet().stream()
         .map(Object::toString)
         .collect(Collectors.toCollection(TreeSet::new));
+  }
+
+  // The file paths of all non-primary language files, including `en-US`.
+  private static Set<String> otherLanguageFiles() throws Exception {
+    try (Stream<Path> stream = Files.list(Paths.get("conf/"))) {
+      return stream
+          .filter(path -> path.getFileName().toString().matches("messages.*"))
+          // Exclude primary language file.
+          .filter(path -> !path.getFileName().toString().equals("messages"))
+          .map(Path::toString)
+          .collect(Collectors.toSet());
+    }
   }
 }
